# Polypheny-Prism-API

./: .gitignore  Prism.csproj  README.md  build.gradle  build_python_local.sh  meson.build  requirements.txt  settings.gradle  setup.py
.github/workflows/: publish-dotnet.yml  publish-go.yml  publish-maven-central.yml  publish-protobuf-zip.yml  publish-pypi.yml  publish.yml  run_doc_generation.yml
doc-generator/: config.py  enums.py  files.py  generator.py  label_names.py  messages.py  proto_utils.py  protobuf.py  rpc.py  type_names.py  utils.py
org/polypheny/prism/: connection_requests.proto  connection_responses.proto  document_frame.proto  error.proto  graph_frame.proto  meta_requests.proto  meta_responses.proto  namespace_meta_requests.proto  namespace_meta_responses.proto  protointerface.proto  relational_frame.proto  statement_requests.proto  statement_responses.proto  stream.proto  stream_requests.proto  stream_responses.proto  transaction_requests.proto  transaction_responses.proto  value.proto
prism/: connection_requests.proto  connection_responses.proto  document_frame.proto  error.proto  graph_frame.proto  meta_responses.proto  namespace_meta_requests.proto  namespace_meta_responses.proto  protointerface.proto  relational_frame.proto  statement_requests.proto  statement_responses.proto  transaction_responses.proto
proto/: protointerface.proto  value.proto
proto/polyprism/: value.proto  version.properties
